setup Postgresql, jdbc and implemented two methods with sql queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-# Define properties for different environments here
-# suppress inspection "UnusedProperty"
-# debug=true
+
+# this file is not used, application.yml is used instead
+##spring.main.banner-mode=off
+spring.output.ansi.enabled=ALWAYS
