--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,7 @@
-# use this OR application.properties
+
+app:
+  datasource:
+    jdbc-url: jdbc:postgresql://localhost:5432/dummydb
+    username: postgres
+    password: password
+    pool-size: 30
